fixed blurry on pixels

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -150,6 +150,7 @@ header {
     width: 100%; 
     height: 100%;
     z-index: -1;
+    image-rendering: pixelated;
 }
 
 .bottom_bar{
